Issue #1902872 by echoz, keyhitman, kim.pepper, Shyamala: Tips for Text format filters have excessive left|right padding on narrow screens.

--- a/core/modules/filter/filter.admin-rtl.css
+++ b/core/modules/filter/filter.admin-rtl.css
@@ -12,4 +12,12 @@
 }
 .filter-help a {
   background-position: left center;
+  padding: 0 0 0 20px;
+}
+
+/**
+ * Improve filter tips position.
+ */
+.tips {
+  padding-right: 0;
 }
